--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             </div>
         </div>
     </section>
-     
+    <footer>this is footer</footer> 
     <script src="js/script.js"></script> 
 </body>
 </html>
