--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
             </div>
         </div>
     </section>
+    <div>hello world</div>
     <footer>this is footer</footer> 
     <script src="js/script.js"></script> 
 </body>
