--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <li>add</li>
                     <li>commit</li>
                     <li>push</li>
-                    <li></li>
+                    <li>insert</li>
                     <li></li>
                     <li></li>
                     <li></li>
