--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <li>commit</li>
                     <li>push</li>
                     <li>insert</li>
-                    <li></li>
+                    <li>delete</li>
                     <li></li>
                     <li></li>
                     <li></li>
