--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="accordion"><h1>Terminologys</h1></div>
             <div class="panel">
                 <ol>
-                    <li></li>
+                    <li>this is li</li>
                     <li></li>
                     <li></li>
                     <li></li>
