--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <li>push</li>
                     <li>insert</li>
                     <li>delete</li>
-                    <li></li>
+                    <li>pop</li>
                     <li></li>
                     <li></li>
                     <li></li>
